add swagger documentation for user flow apis
